assets/styles.css
@import url('https://fonts.googleapis.com/css2?family=Noticia+Text:ital@1&family=Zen+Old+Mincho&display=swap');

body {
  margin:0;
  padding:0;
  box-sizing: border-box;
  font-family: 'Noticia Text', serif;
  font-family: 'Zen Old Mincho', serif;
 }
  
.header {
  padding: 5px 45px;
  background-color: lightslategray;
  border: solid 2px black;
  opacity: 0.6;
  color: #000;
  display: flex;
  justify-content: space-between;
  align-items:center;
  margin-left: 6px;
  margin-right: 6px;
  width: 100%;
}

.nav a {
  color: black;
  text-decoration: none;
  font-size: 28px;
}

.nav a:hover {
  color: darkred;
  background-color:blanchedalmond;
}
.nav {
  list-style: none;
  margin:0;
  padding:0;
  display: flex;
}

.nav li {
  margin-left: 25px;
}

.hero {
  background-color:antiquewhite;
  opacity: 0.8;
  background-repeat: no-repeat;
  background-size: cover;
  background-color:antiquewhite;
  min-height: 800px;
  margin: 20px;
  padding: 10px;
  max-width: 100%;
  border: solid 1px black;
}

.container {
  display: flex;
  justify-content: space-between;
}


.who {
  background-color: antiquewhite;
  opacity: 0.5;
  border: 1px solid black;
  display: flex;
  flex-wrap: wrap;
  max-width: 400px;
  height: 600px;
  margin: 20px 20px;
  padding: 5px 10px;
  text-align: center;
}

.dates {
  background-color: antiquewhite;
  opacity: 0.5;
  border: 1px solid black;
  display: flex;
  align-items: flex-end;
  flex-wrap:wrap;
  max-width: 500px;
  height: 600px;
  margin: 20px 20px;
  padding: 5px 10px;
  text-align: center;
  overflow:scroll;
}



.live {
background-color: gainsboro;
opacity: 0.8;
padding: 30px 30px 30px 30px;
display: grid;
grid-template-columns: 33% 33% 33%;
margin: 20px 30px 0 40px;
grid-row-gap: 20px;
grid-column-gap: 50px;
max-width: 90%;
}
   
.info {
  background-color: gainsboro;
  opacity: 0.8;
  padding: 30px 30px 30px 30px;
  text-align: center;
  max-width: 90%;
  margin: 20px 40px 20px 40px;
  border: solid 2px black;
}

.albums {
background-color: gainsboro;
opacity: 0.8;
padding: 20px 20px;
display: grid;
grid-template-columns: 24% 38% 36%;
margin: 20px 20px;
margin-right: px;
grid-row-gap: 6px;
grid-column-gap: 10px;
max-width: 100%;
}

hr {
  width:70%
}
div.albums{
  border: 1px solid black;
}

div.albums:hover {
  border: 1px solid #777;
}

div.album img {
  width: 100%;
  height: auto;
}

div.desc {
  padding: 15px;
  text-align: center;
}



* {
  box-sizing: border-box;
}

input[type=text], select, textarea, email {
  width: 100%;
  padding: 12px;
  border: 1px solid #ccc;
  border-radius: 4px;
  resize: vertical;
}

label {
  padding: 6px 12px 12px 0;
  display: inline-block;
}

input[type=submit] {
  background-color: goldenrod;
  color: black;
  padding: 12px 10px;
  border: solid 1px black;
  border-radius: 2px;
  cursor: pointer;
  float: right;
}

input[type=submit]:hover {
  background-color: crimson;
}

.container {
  border-radius: 5px; 
  background-color: gainsboro;
  border: solid 1px black;
  opacity: 0.8;
  padding: 20px;
  margin: 5px 5px;
  
}

.col-25 {
  float: left;
  width: 50%;
  margin-top: 6px;
}

.col-75 {
  float: left;
  width: 100%;
  margin-top: 6px;
}

.lead {
  font-size: 20px;
  text-align:center;
  background-color: gainsboro;
  margin: 4px 2px;
  border: solid black 1px;
}

.footer {
  background-color: lightslategray;
  opacity: 0.6;
  color:black;
  text-align: center;
  border: 2px solid black;
  padding: 6px 6px;
  margin: 0 0 30px;
  color: #000;
  display: flex;
}

.social {
  color: black;
  justify-content: space-between;
  list-style-type: none;
  display:flex;
  font-size: 40px;
  margin: 2px 10px 20px 20px;
}


.footer .social a:hover {
  color:aqua;
}

@media screen and (max-width: 600px) {
  .col-25, .col-75, input[type=submit] {
    width: 100%;
    margin-top: 0;
  }
}

